# MovieLens-API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: frontend.py  main.py  schemas.py
data/: movie_genre_vectors.csv  movies_metadata.csv  top_similar_movies.csv
preprocess/: eda.ipynb  preprocessing.py
tests/: integration_test.py  unit_test.py
